fixed captcha overflow in signup page

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -2,6 +2,10 @@ body {
     font-size: 14px;
 }
 
+.g-recaptcha{
+    overflow: hidden;
+}
+
 .tree {
     font-size: 13px;
     padding: 0px;
